# strix

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: generate_demo.py
src/strix/: __init__.py  __main__.py  banner.py  cli.py  config.py  http.py  logging.py  models.py  orchestrator.py  registry.py  target.py
src/strix/modules/: __init__.py  _exif.py  base.py  domain.py  dorking.py  email.py  file.py  image.py  ip.py  phone.py  portscan.py  username.py  wallet.py
src/strix/report/: __init__.py  engine.py  html.py  markdown.py
src/strix/report/templates/: report.html.j2
tests/: conftest.py  test_domain.py  test_dorking.py  test_image.py  test_models.py  test_orchestrator.py  test_target.py  test_wallet.py
